# FASST-CAT

./: #data.csv#  #valves.py#  .gitignore  README.md  caproto-ioc.py  config.json  data (2).hdf5  data.h5  eurotherm3500_v7.py  eurotherm3504_v1.py  eurothermSerial.py  eurothermTCP.py  flowSMS.py  gasControl.py  gas_control_nist.py  gas_control_nist2.py  gas_control_nist3.py  h origin master  hiden_interface.py  hiden_interface2.py  import_serial.py  larch_analysis.py  logger.py  main.py  modbustcp.py  propar_comms.py  pyproject.toml  serialTCP.py  utils.py  valve_control.py  valves.py  valves_tcp.py
config/: README.md
examples/: gases.toml
fasstcat/: eurothermSerial.py  eurothermTCP.py  flowSMS.py  gasControl.py  ioc.py  main.py  serialTCP.py  utils.py  valves.py
old_code/: Untitled.ipynb  Untitled1.ipynb  data.csv  data.hdf5  data2.h5  data3.h5  eurotherm_cloneconfig_fasstcat.uic  gas_control_nist.py  gas_control_nist2.py  hiden_interface.py  segment_counter.py  test.py  valve_control.py  valves_comms.py  valves_tcp.py  vc_test.py
