[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fasstcat"
description = "FASST-CAT Catalysis control system"
dynamic = ["version"]
authors = [{ name = "Charles Titus", email= "ctitus@bnl.gov"}, { name = "Jorge Moncada Vivas", email="jmoncadav@bnl.gov"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "minimalmodbus",
    "pyserial",
    "pyModbusTCP",
    "bronkhorst-propar",
    "ipython",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
packages = ["fasstcat"]

[project.scripts]
fasstcat = "fasstcat.main:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pyserial = "*"
ipython = "*"
numpy = "*"
matplotlib = "*"

[tool.pixi.pypi-dependencies]
fasstcat = { path = ".", editable = true }

[tool.pixi.tasks]
interactive = { cmd = "fasstcat"}
help = "fasstcat --help"
install = "pip install -e ."
